# elastica-pipelines

./: .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: labels.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  examples.md  index.md  reference.md  requirements.txt  usage.md
docs/api/: io.md  io.md.include
examples/: io_iteration.py  io_selection.py  io_transforms.py
src/elastica_pipelines/: __init__.py  __main__.py
src/elastica_pipelines/io/: __init__.py  backends.py  core.py  entry.py  protocols.py  specialize.py  temporal.py  transforms.py  typing.py
tests/: __init__.py  conftest.py  test_main.py
tests/io/: __init__.py  test_backends.py  test_core.py  test_entry.py  test_protocols.py  test_specialize.py  test_temporal.py  test_transforms.py
tests/io/data/: elastica_000050.h5  elastica_metadata.h5
