[tool.poetry]
name = "elastica-pipelines"
version = "1.0.0"
description = "Elastica Pipelines"
authors = ["ElasticaDev <tp5@illinois.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tp5uiuc/elastica-pipelines"
repository = "https://github.com/tp5uiuc/elastica-pipelines"
documentation = "https://elastica-pipelines.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/tp5uiuc/elastica-pipelines/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
numpy = ">=1.20.0"
typing-extensions = ">=4.3.0"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
# flake8-bandit has issues with flake8 > 5.0.0
# The code is in the repository, but a stable release has not been made
flake8 = "^4.0.1"
flake8-bandit = ">=3.0.0"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = "4.0.0"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
elastica-pipelines = "elastica_pipelines.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["elastica_pipelines", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
